Add empty list label

--- a/src/app/my-list/my-list.page.html
+++ b/src/app/my-list/my-list.page.html
@@ -23,6 +23,9 @@
             </ion-label>
           </ion-item>
         </ion-list>
+        <div *ngIf="cocktails.length == 0" class="ionic-text-center">
+          Your list is empty.
+        </div>
       </ion-col>
     </ion-row>
   </ion-grid>
